--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ VITE_DROP_CONSOLE = true
 # VITE_PROXY=[["/api","https://localhost:59206"]]
 
 # API 接口地址
-VITE_GLOB_API_URL =https://localhost:59206
+VITE_GLOB_API_URL =http://10.10.4.95:5005
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL=
