--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
+    "sass": "^1.71.1",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^29.0.0",
