--- a/.env.production
+++ b/.env.production
@@ -11,7 +11,7 @@ VITE_BASE_URL = /
 VITE_DROP_CONSOLE = true
 
 # API
-VITE_GLOB_API_URL =
+VITE_GLOB_API_URL =http://10.10.4.95:5005
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL=
@@ -20,7 +20,7 @@ VITE_GLOB_UPLOAD_URL=
 VITE_GLOB_IMG_URL=
 
 # 接口前缀
-VITE_GLOB_API_URL_PREFIX = /api
+VITE_GLOB_API_URL_PREFIX = 
 
 # 是否启用gzip压缩或brotli压缩
 # 可选: gzip | brotli | none
